fix: align header and main (#347)

--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -145,5 +145,5 @@ smoothly-app>smoothly-notifier>header>nav>ul li a.active {
 }
 smoothly-app > smoothly-notifier > main {
 	position: relative;
-	top: 5.6rem;
+	top: 5rem;
 }
